fix: updated css and animation to avoid overflow on mobile devices

--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -4,6 +4,7 @@
 	@include sectionsMargin;
 
 	padding: 30px;
+	overflow-x: hidden;
 }
 
 .infoWrap {
